feat: Rename to `organice`

--- a/changelog.org
+++ b/changelog.org
@@ -47,7 +47,7 @@ All notable changes to this project will be documented in this file.
 
 - As a user, when in a directory listing, I want the folders and files
   to be sorted alphabetically. Furthermore, I only want to see files
-  that organ can open (that is org and org archive files).
+  that organice can open (that is org and org archive files).
 - Note: This is only implemented for the Dropbox back-end at this time.
 
 *** Changed
@@ -101,7 +101,7 @@ All notable changes to this project will be documented in this file.
 - Documented deployment options
   - People have been asking for tighter access restrictions.
   - Imo the best answer to that request is to make it as easy as
-    possible to host organ.
+    possible to host organice.
   - There's myriads of good options, of course. I picked to document
     two that will (potentially) be cost-free to the users and which
     are very easy and quick to set up: Ftp and Heroku.
