add hint on 200ok's instance of organice

--- a/README.org
+++ b/README.org
@@ -16,6 +16,11 @@ for mobile and desktop browsers.
 organice lets you directly edit your org files online. It syncs with
 Dropbox and Google Drive and is optimized for mobile use.
 
+At 200ok we run an instance of orgenice at https://org.200ok.ch, which
+is open for anyone to use. Organice does not have a backend (it's just
+a frontend application, which uses either Dropbox or Google Drive as
+backend storage). Hence no data stored on our servers.
+
 [[./images/screenshot--overview.png]]
 
 ** Capture params and Siri support
