--- a/README.org
+++ b/README.org
@@ -23,40 +23,44 @@ Drive as back-end storage). Hence no data stored on our servers.
 
 [[./images/screenshot--overview.png]]
 
-** Capture params and Siri support
+** Usage
+*** Current restrictions/expectations of organice
 
-organice supports a flexible mechanism for capturing using URL
-parameters. This mechanism integrates very nicely with the new [[https://support.apple.com/guide/shortcuts/welcome/ios][Siri
-Shortcuts]] feature in iOS 12, allowing you to use Siri to execute
-capture templates.
+"Current" means we're working hard on removing the following
+restrictions and expectations.
 
-You can use [[https://www.icloud.com/shortcuts/4e51e8b748d14a50aa70ac6fb963f775][this sample Shortcut]] to get started with this right away
-in iOS 12. Open the link on your iOS device and click "Get Shortcut".
-Then open up the Shortcuts app and edit the template by following the
-directions in the comments. Then record a Siri trigger and you're good
-to go!
+- organice understands only few in-buffer settings (=#+TODO:= and
+  =#+TYP_TODO:=).
+  - If you have other in-buffer settings and save the file with
+    organice, they will be lost.
+- After potential in-buffer settings, your Org file _has to_ begin
+  with a headline.
+  - Meaning that a file with just some text (which would otherwise be
+    proper Org syntax) will not be parsed correctly.
+  - After that first headline, organice is actually very robust in
+    reading your Org file and _not_ breaking any of it. We've had
+    users with 10k LOC Org files with all kinds of native Org features
+    (of which organice only has partial understanding) and they just
+    work fine!
+- There is [[https://github.com/200ok-ch/organice/pull/2][a known parser bug]]: If you have a =*bold*= statement at
+  the beginning of a line, it will be interpreted as a headline.
 
-Alternatively, you can take advantage of the URL parameters yourself
-to build your own custom capture mechanism. All three of the following
-parameters are required and must be URL encoded:
+Generally, when working with distributed Org files, we're recommending
+to put them under version control and to check for bugs and racing
+conditions between clients.
 
-- ~captureTemplateName~: the name of the capture template to use. This
-  capture template must already exist in Settings > Capture templates.
-- ~captureFile~: the path (for Dropbox) or id (for Google Drive) of
-  the file in which to execute the capture template.
-- ~captureContent~: the content you'd like to capture. This content
-  will be placed at the cursor position if specified in the capture
-  template (with ~%?~), or at the end of the template if its not
-  specified.
+Please [[https://github.com/200ok-ch/organice/issues/new][file an issue]] if you find additional restrictions, expectations
+or bugs that you you wouldn’t have expected.
 
-You can also specify additional custom variables for use in your
-templates. They should be in the format ~captureVariable_<your custom
-variable>~, and should also be URL encoded. In your capture template
-they'd show up as ~%<your custom variable>~.
+**** Background information
 
-Here's an example URL:
+organice utilizes [[src/lib/parse_org.js][a custom parser]] for Org files. It works fine - if
+you know about the kinks. Getting those out is not trivial, because
+writing a parser in custom code is hard. "We're working hard" means
+that we're in the process of implementing a proper BNF based parser
+and a set of tests behind that. We're working on [[https://gitlab.200ok.ch/200ok/org-parser][org-parser]] which
+strives to be that!
 
-[[https://org.200ok.ch?captureTemplateName=Grocery%2520item&captureContent=Lemon&captureFile=/org/todo.org&captureVariable_location=Home]]
 ** Development
 
 organice is built with React and Redux. It was bootstrapped with [[https://github.com/facebook/create-react-app][Create React App]].
@@ -103,7 +107,6 @@ use automatically.
 
 If you're using Emacs, you can autoformat your source files:
 https://github.com/munen/emacs.d/#auto-formatting
-
 ** Deployment
 
 Since organice is a front-end only application, it can easily be
@@ -177,6 +180,40 @@ RewriteRule ^ - [L]
 
 RewriteRule ^ /index.html [L]
 #+END_EXAMPLE
+** Capture params and Siri support
+
+organice supports a flexible mechanism for capturing using URL
+parameters. This mechanism integrates very nicely with the new [[https://support.apple.com/guide/shortcuts/welcome/ios][Siri
+Shortcuts]] feature in iOS 12, allowing you to use Siri to execute
+capture templates.
+
+You can use [[https://www.icloud.com/shortcuts/4e51e8b748d14a50aa70ac6fb963f775][this sample Shortcut]] to get started with this right away
+in iOS 12. Open the link on your iOS device and click "Get Shortcut".
+Then open up the Shortcuts app and edit the template by following the
+directions in the comments. Then record a Siri trigger and you're good
+to go!
+
+Alternatively, you can take advantage of the URL parameters yourself
+to build your own custom capture mechanism. All three of the following
+parameters are required and must be URL encoded:
+
+- ~captureTemplateName~: the name of the capture template to use. This
+  capture template must already exist in Settings > Capture templates.
+- ~captureFile~: the path (for Dropbox) or id (for Google Drive) of
+  the file in which to execute the capture template.
+- ~captureContent~: the content you'd like to capture. This content
+  will be placed at the cursor position if specified in the capture
+  template (with ~%?~), or at the end of the template if its not
+  specified.
+
+You can also specify additional custom variables for use in your
+templates. They should be in the format ~captureVariable_<your custom
+variable>~, and should also be URL encoded. In your capture template
+they'd show up as ~%<your custom variable>~.
+
+Here's an example URL:
+
+[[https://org.200ok.ch?captureTemplateName=Grocery%2520item&captureContent=Lemon&captureFile=/org/todo.org&captureVariable_location=Home]]
 
 ** Comparison
 
