--- a/changelog.org
+++ b/changelog.org
@@ -2,6 +2,12 @@
 
 All notable changes to this project will be documented in this file.
 
+** <2019-09-08 Sun>
+*** Added
+
+- Documented how to use organice from a bookmarklet using the capture
+  template feature
+
 ** <2019-09-06 Fri>
 *** Fixed
 
