--- a/changelog.org
+++ b/changelog.org
@@ -2,6 +2,18 @@
 
 All notable changes to this project will be documented in this file.
 
+** <2019-09-21 Sat>
+
+*** Changed
+
+- @MTrost [[https://github.com/200ok-ch/organice/pull/45][introduced]] a new testing library called [[https://testing-library.com/docs/intro][React Testing
+  Library]] which greatly simplified writing interaction tests.
+
+*** Fixed
+
+- Parser bug which would interpret *bold* statements in the beginning
+  of a line as a header.
+
 ** <2019-09-19 Thu>
 
 *** Changed
